# unbelipy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENCE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: changelog.rst  client.rst  conf.py  getting_started.rst  index.rst  objects.rst
docs/_build/doctrees/: changelog.doctree  client.doctree  environment.pickle  exceptions.doctree  index.doctree  objects.doctree
docs/_build/doctrees/source/: conf.doctree  modules.doctree
docs/_build/html/: .buildinfo  changelog.html  client.html  exceptions.html  genindex.html  index.html  objects.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: exceptions.rst.txt  objects.rst.txt
docs/_build/html/_static/: custom.css
docs/_build/html/source/: conf.html  modules.html
docs/_static/css/: custom.css
examples/: basic.py  example.py
unbelipy/: __init__.py  api.py  client.py  constants.py  errors.py  objects.py  rate_limits.py
