[tool.poetry]
name = "unbelipy"
version = "1.1.1b"
description = "Asynchronous wrapper for UnbelievaBoat's API written in python"
keywords=["discord", "discord.py", "discord bot", "UnbelievaBoat"]
authors = ["chrisdewa <alexdewa@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/chrisdewa/unbelipy"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
]
packages = [
    {include = "unbelipy"}
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4.post0"
aiolimiter = "^1.0.0b1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
