[tool.poetry]
name = "unbelipy"
version = "2.1.0b"
description = "Asynchronous wrapper for UnbelievaBoat's API written in Python."
keywords = ["discord", "discord.py", "discord bot", "UnbelievaBoat"]
authors = ["chrisdewa <alexdewa@gmail.com>", "rperson1508 <rperson1508@pm.me>"]

readme = "README.md"
license = "MIT"
repository = "https://github.com/chrisdewa/unbelipy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
]
include = ["LICENSE"]
packages = [
    { include = "unbelipy" }
]

[tool.poetry.urls]
"Issue tracker" = "https://github.com/chrisdewa/unbelipy/issues"
"Documentation" = "https://unbelipy.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4.post0"
aiolimiter = "^1.0.0b1"

sphinx = { version = "^4.0.0", optional = true }
sphinx-book-theme = { version = "^0.3.2", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = [
    "sphinx", 
    "sphinx-book-theme"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
